# korrosync

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  flake.nix  renovate.json
.github/ISSUE_TEMPLATE/: api-features.md  bug_report.md  config.yml  deployment-distribution.md  documentation.md  feature_request.md  infrastructure.md  testing-quality.md
.github/workflows/: cd.yml  ci.yml  docker.yml
scripts/: build-and-push
src/: cli.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  sync.rs
src/api/: error.rs  mod.rs  router.rs  state.rs
src/api/middleware/: auth.rs  mod.rs  public.rs  ratelimiter.rs
src/api/routes/: fallback.rs  healthcheck.rs  mod.rs  register.rs  robots.rs  syncs_progress.rs  users_auth.rs
src/model/: error.rs  mod.rs  progress.rs  user.rs
src/service/: db.rs  error.rs  mod.rs  serialization.rs
src/service/db/: mod.rs  redb.rs
src/sync/: error.rs  mod.rs  serialization.rs  service.rs
tests/: cli.rs  fallback_test.rs  health_check.rs  health_check_test.rs  middleware_test.rs  register_test.rs  robots_test.rs  syncs_progress_test.rs  users_auth_test.rs
tests/common/: mod.rs
tls/: README.md  cert.pem  key.pem
