[package]
name = "korrosync"
version = "0.1.4"
edition = "2024"
authors = ["Sebastián Zaffarano <sebastian.zaffarano@elastic.co>"]
license = "MIT"
repository = "https://github.com/szaffarano/korrosync"
documentation = "https://docs.rs/korrosync/"
readme = "README.md"
description = "A KOReader Sync Server "

[lib]
path = "./src/lib.rs"

[[bin]]
path = "./src/main.rs"
name = "korrosync"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.6", features = ["http2", "macros", "multipart"] }
axum-extra = { version = "0.12.1", features = ["with-rejection"] }
bincode = "2.0.1"
chrono = "0.4.42"
color-eyre = "0.6.5"
governor = "0.10"
redb = "3.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0"
tokio = { version = "1.48.0", features = [
  "rt-multi-thread",
  "macros",
  "signal",
] }
tokio-util = { version = "0.7", features = ["rt"] }
tower = "0.5"
tower-http = { version = "0.6.6", features = ["trace"] }
tower_governor = "0.8.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.1.1"
reqwest = "0.12.24"
tokio-retry2 = "0.7.0"
tokio = { version = "1.48.0", features = ["process"] }
tempfile = "3.23.0"
temp-env = { version = "0.3.6", features = ["async_closure"] }
serial_test = "3.2.0"
